--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en" ng-app="MyStore"> <!-- This connects to app.js to create our first module -->
 <head>
     <meta charset="utf-8">
@@ -14,6 +15,7 @@
 
     <!-- Custom styles for this template -->
     <link href="assets/css/layout.css" rel="stylesheet">
+    <link href="assets/css/product-list.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -33,13 +35,13 @@
         </div>
 
             <ul class="nav navbar-nav">
-                <li ui-sref-active="active">
+                <li ui-sref-active="active"><!--We bypass going through the DOM, so its easier and more efficient -->
                     <a ui-sref="home">Home</a>
                 </li>
                 <li ui-sref-active="active">
                     <a ui-sref="products">Products</a>
                 </li>
-                <li ui-sref-active="active">
+                <li ui-sref-active="active"> 
                 <a ui-sref="about">About</a>
                 </li>
                 <li ui-sref-active="active">
@@ -56,5 +58,6 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="app.js"></script>
     <script src="routes.js"></script>
+    <script src="controllers/product_list_controller.js"></script> <!-- this connects the product_list_controllers page to the html, you must also add controller into "routes" file -->
     </body>
 </html>
