--- a/index.html
+++ b/index.html
@@ -59,5 +59,7 @@
     <script src="app.js"></script>
     <script src="routes.js"></script>
     <script src="controllers/product_list_controller.js"></script> <!-- this connects the product_list_controllers page to the html, you must also add controller into "routes" file -->
+    <script src="services/product_service.js"></script>
+    <script src="controllers/product_detail_controller.js"></script>
     </body>
 </html>
