--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/layout.css" rel="stylesheet">
     <link href="assets/css/product-list.css" rel="stylesheet">
+    <link href="assets/css/featured-products.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -61,5 +62,6 @@
     <script src="controllers/product_list_controller.js"></script> <!-- this connects the product_list_controllers page to the html, you must also add controller into "routes" file -->
     <script src="services/product_service.js"></script>
     <script src="controllers/product_detail_controller.js"></script>
+    <script src="controllers/home-controller.js"></script>
     </body>
 </html>
