--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,17 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.11/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.11/angular-cookies.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.11/angular-messages.min.js"></script>
+    <script>
+        if(!window.jQuery){
+            document.write('<script src="bower_components/jquery/dist/jquery.min.js"><\/script>');
+        }
+    </script>
 </head>
-    <body ng-controller="AppController">
+    <body ng-controller="AppController"></body>
 
     <!-- Fixed navbar -->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -85,10 +90,12 @@
     <script src="controllers/login-controller.js"></script>
     <script src="controllers/signup-controller.js"></script>
     <script src="controllers/app-controller.js"></script>
+    <script src="controllers/cart-controller.js"></script>
 
     <script src="directives/product-details-button.js"></script>
     <script src="directives/featured-product-directive.js"></script>
     <script src="directives/add-cart-button.js"></script>
+    <script src="directives/mini-cart-directive.js"></script>
 
     <script src="services/auth-services.js"></script>
     <script src="services/product_service.js"></script>
